--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         </div>
                         <div class="interest_item">
                             <i data-feather="book"></i>
-                            <span>Bopk</span>
+                            <span>Book</span>
                         </div>
                         <div class="interest_item">
                             <i data-feather="map"></i>
