--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             collaborate seamlessly within dynamic 
                             teams.
                         </p>
-                        <a class="download btn" href="https://github.com/khangdang12324/KhangResume.github.io/blob/main/ResumeKhang.pdf" download="ResumeKhangDang.pdf">Download PDF Resume</a>
+                        <a class="download btn" href="https://github.com/khangdang12324/KhangResume.github.io/raw/main/ResumeKhang.pdf" download="ResumeKhangDang.pdf">Download PDF Resume</a>
                     </div>
 
                 </div>
